--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native": "~0.55.2",
     "react-native-animatable": "^1.3.0",
     "react-native-modal": "^6.5.0",
+    "react-native-parallax": "^0.3.0",
     "react-native-snap-carousel": "^3.7.2",
     "react-navigation": "^2.9.3",
     "react-navigation-fluid-transitions": "^0.2.2"
