--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
+    "date-fns": "^1.29.0",
     "expo": "^27.0.1",
     "react": "^16.3.1",
     "react-native": "~0.55.2",
     "react-native-animatable": "^1.3.0",
+    "react-native-lightbox": "^0.7.0",
     "react-native-modal": "^6.5.0",
     "react-native-parallax": "^0.3.0",
     "react-native-snap-carousel": "^3.7.2",
